@@ -1,3 +1,7 @@
+2011-08-29  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclIORTrans.c: Leak of ReflectedTransformMap.
+
 2011-08-27  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclStringObj.c:  [RFE 3396731] Revise the [string reverse]
